Closed Bug 885266 Opened 11 years ago Closed 11 years ago

gfx/layers/ipc/ShadowLayerUtilsGralloc.cpp:453:24: warning: extra tokens at end of #ifdef directive

Categories

(Core :: Graphics: Layers, defect)

All
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla24

People

(Reporter: kanru, Assigned: qdot)

References

Details

Attachments

(1 file)

Need to s/#ifdef/#if/
Assignee: nobody → kyle
Attachment #765513 - Flags: review?(kchen) → review+
https://hg.mozilla.org/mozilla-central/rev/3185e7bf207c
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla24
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: