Bug 885266: Fix wrong ifdef in ShadowLayersUtilsGralloc; r=kanru